import java.util.Date;

public class Matricula {
    private Date data;
    private String status;

    public Matricula(Date data, String status) {
        this.data = data;
        this.status = status;
    }

    public void efetuarMatricula() {
        // Método para efetuar matrícula
    }

    public void cancelarMatricula() {
        // Método para cancelar matrícula
    }
}
