public class Secretaria {
    private String nome;
    private int id;

    public Secretaria(String nome, int id) {
        this.nome = nome;
        this.id = id;
    }

    public void manterInformacoes() {
        // Método para manter informações
    }

    public void ativarDisciplina(Disciplina disciplina) {
        // Método para ativar disciplina
    }

    public void cancelarDisciplina(Disciplina disciplina) {
        // Método para cancelar disciplina
    }
}
