public class SistemaDeCobranca {
    public void gerarCobranca(Aluno aluno) {
        // Método para gerar cobrança
    }
}
