public class SistemaDeMatriculas {
    public void iniciarPeriodoMatricula() {
        // Método para iniciar período de matrícula
    }

    public void finalizarPeriodoMatricula() {
        // Método para finalizar período de matrícula
    }

    public void notificarSistemaDeCobranca(SistemaDeCobranca sistemaDeCobranca) {
        // Método para notificar o sistema de cobrança
    }
}
