public class Universidade {
    private String nome;

    public Universidade(String nome) {
        this.nome = nome;
    }

    public void gerarCurriculo() {
        // Método para gerar currículo
    }
}
